--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,10 +32,12 @@ dependencies:
     sdk: flutter
   provider: ^5.0.0
   sqflite: ^2.4.1
+  path: ^1.8.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  synchronized: ^3.3.1
 
 dev_dependencies:
   flutter_test:
