--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -80,8 +80,10 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
+  fonts:
+    - family: Todolisticon
+      fonts:
+        - asset: assets/fonts/Todolisticon.ttf
   #     fonts:
   #       - asset: fonts/Schyler-Regular.ttf
   #       - asset: fonts/Schyler-Italic.ttf
