--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,12 +35,14 @@ dependencies:
   path: ^1.8.0
   google_fonts: ^6.0.0
   flutter_signin_button: ^2.0.0
+  firebase_core: ^3.1.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   synchronized: ^3.3.1
   nested: ^1.0.0
+  firebase_auth: ^5.5.2
 
 dev_dependencies:
   flutter_test:
