Navegacao sem contexto e configurando Home e Splash

--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -45,5 +45,19 @@
 	<true/>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
+	<key>GIDClientID</key>
+    <string>589468369544-r2fl89ulmnpvbuu7g8j4hhf073gqvcml.apps.googleusercontent.com</string>
+    <key>CFBundleURLTypes</key>
+    <array>
+		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>com.googleusercontent.apps.589468369544-r2fl89ulmnpvbuu7g8j4hhf073gqvcml</string>
+			</array>
+		</dict>
+	</array>
+    <!-- End of the Google Sign-in Section -->
 </dict>
 </plist>
