--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   synchronized: ^3.3.1
   nested: ^1.0.0
   firebase_auth: ^5.5.2
+  date_picker_timeline: ^1.2.3
 
 dev_dependencies:
   flutter_test:
