--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
   provider: ^5.0.0
   sqflite: ^2.4.1
   path: ^1.8.0
@@ -47,6 +49,7 @@ dependencies:
   nested: ^1.0.0
   firebase_auth: ^5.5.2
   date_picker_timeline: ^1.2.3
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
